# django-latch2

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  LICENSE  README.md  SECURITY.md  makemigrations.py  noxfile.py  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: authentication-backends.rst  changelog.rst  ci.yml  conf.py  custom-backends.rst  decorators.rst  docs_settings.py  exceptions.rst  faq.rst  forms.rst  index.rst  install.rst  mixins.rst  models.rst  quickstart.rst  requirements.txt  security.rst  settings.rst  spelling_wordlist.txt  usage.rst  view-access-control.rst  views.rst
docs/locale/es/LC_MESSAGES/: authentication-backends.po  changelog.po  custom-backends.po  exceptions.po  faq.po  forms.po  index.po  install.po  quickstart.po  security.po  settings.po  views.po
latch/: __init__.py  admin.py  auth_backend.py  forms.py  helpers.py  models.py  views.py
latch-demo/latch_demo/: settings.py
latch/locale/es/LC_MESSAGES/: django.mo  django.po
latch/templates/: latch_message.html  latch_pair.html  latch_status.html  latch_unpair.html
latch/tests/: __init__.py  tests_api.py  tests_login.py  tests_pairing.py  tests_status.py  tests_unconfigured.py  tests_unpairing.py
src/django_latch/: __init__.py  apps.py  checks.py  decorators.py  exceptions.py  forms.py  mixins.py  models.py  urls.py  views.py
src/django_latch/migrations/: 0001_initial.py
src/django_latch2/: __init__.py  apps.py  backend.py  backends.py  checks.py  decorators.py  exceptions.py  forms.py  mixins.py  models.py  urls.py  views.py
tests/: backends.py  base.py  settings.py  test_allauth.py  test_api.py  test_backend.py  test_checks.py  test_settings.py  test_workflow.py  urls.py  urls_allauth.py  views.py
tests/allauth_authentication/: __init__.py  backends.py  test_settings.py  test_workflow.py  urls.py
tests/base_authentication/: __init__.py  test_backend.py  test_checks.py  test_settings.py
tests/base_authentication/templates/django_latch2/: pair_account_form.html  unpair_account.html
tests/base_authentication/templates/registration/: login.html
